--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "mathjs-server",
-  "version": "0.0.0",
-  "private": true,
+  "name": "object-server",
+  "version": "0.0.1",
+  "private": false,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "NODE_ENV=test jest",
+    "watch-test": "NODE_ENV=test jest --watch",
+    "dev": "nodemon ./bin/www",
+    "livereload": "livereload ./src -w 1000 -d"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,11 +15,14 @@
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "livereload": "^0.8.0",
+    "lodash": "^4.17.15",
     "mathjs": "^6.2.1",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.2"
   },
   "devDependencies": {
+    "axios": "^0.19.0",
     "jest": "^24.9.0"
   }
 }
